@@ -1,3 +1,4 @@
 Touhou Launcher.v11.suo
 bin/
 obj/
+/.vs/
